# llm.sh

./: README.md  pyproject.toml
llm/: pyproject.toml
llm/llm/: gpt3.py  main.py
llm/src/: gpt3.py  main.py
src/: __init__.py  main.py
