[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["jayhack <jayhack.0@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
openai = "^0.25.0"
colorama = "^0.4.6"
halo = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


